# DirectEd-E-Learning

./: package-lock.json
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
backend/src/config/: cloudinary.ts  db.ts  env.ts
backend/src/controllers/: auth.controller.ts  contentController.ts  instructor.contoller.ts  progress.controller.ts  quiz.controller.ts  quizAttemptController.ts  user.controller.ts
backend/src/middleware/: Quizmiddleware.ts  (+6 more)
chatbot-backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  trial.ipynb
chatbot-backend/data/processed/train/: data-00000-of-00001.arrow  state.json
chatbot-backend/data/processed/val/: data-00000-of-00001.arrow  state.json
chatbot-backend/data/raw/: directed_dataset.jsonl  raw_training_data.json  raw_validation_data.json
chatbot-backend/finetuning/: generate_dataset.py  prepare_data.py  run_finetuning.py  run_finetuning_collab.py
chatbot-backend/finetuning/finetuned_model/: README.md  finetuning_and_inference.ipynb
chatbot-backend/knowledge/: 09-UX.txt  UX_Design_for_Startups.txt  the-basics-of-ux-design.txt
chatbot-backend/src/: main.py  pipeline.py  templates.py  test_api.py
chatbot-backend/src/core/: app.py  chatbot.py  components.py  data_handlers.py
chatbot-backend/src/core/api/: endpoints.py
chatbot-backend/src/core/schemas/: __init__.py  chat_models.py
chatbot-backend/src/core/services/: educational_assistant.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
(+81 files in other folders)
