[project]
name = "directed_va"
version = "0.1.0"
description = "directed_va using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
directed_va = "directed_va.main:run"
run_crew = "directed_va.main:run"
train = "directed_va.main:train"
replay = "directed_va.main:replay"
test = "directed_va.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
